# mcim-translate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  translation_table.json
.github/workflows/: gitlab-sync.yml
mcim_translate/: logger.py
mcim_translate/config/: __init__.py
mcim_translate/database/: __init__.py
mcim_translate/database/mongodb/: __init__.py
mcim_translate/database/mongodb/query/: __init__.py  curseforge.py  modrinth.py
mcim_translate/telegram/: __init__.py
mcim_translate/translate/: __init__.py
translate_mod_summary/: constants.py  logger.py
translate_mod_summary/config/: __init__.py
translate_mod_summary/database/: __init__.py  mongodb.py
translate_mod_summary/database/mongodb/: __init__.py
translate_mod_summary/database/mongodb/query/: __init__.py  curseforge.py  modrinth.py
translate_mod_summary/translate/: __init__.py
utils/config/: __init__.py  constants.py  corn.py  mongodb.py  translate.py
utils/database/: __init__.py  mongodb.py
utils/translate/: __init__.py
